syntax = "proto3";

option csharp_namespace = "OrderService.Protos";

package order;

service OrderService {
  rpc GetUserOrders (GetUserOrdersRequest) returns (GetUserOrdersResponse);
  rpc GetOrder (GetOrderRequest) returns (OrderResponse);
}

message GetUserOrdersRequest {
  int32 user_id = 1;
}

message GetOrderRequest {
  int32 id = 1;
}

message OrderResponse {
  int32 id = 1;
  int32 user_id = 2;
  int32 product_id = 3;
  int32 quantity = 4;
  double total_price = 5;
  string order_date = 6;
}

message GetUserOrdersResponse {
  repeated OrderResponse orders = 1;
}

