syntax = "proto3";

option csharp_namespace = "UserService.Protos";

package user;

service UserService {
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse);
}

message GetUserRequest {
  int32 id = 1;
}

message GetAllUsersRequest {
}

message UserResponse {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
}

message GetAllUsersResponse {
  repeated UserResponse users = 1;
}

